# pastel

./: BoardView.cpp  BoardView.h  CMakeLists.txt  board.cpp  board.h  main.cpp  piece.cpp  piece.h
tests/: random_piece.cpp  rotate.cpp
